[package]
name = "tty"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ringbuf = "0.2.6"

[dependencies.sdl2]
version = "0.35.1"
default-features = false
features = ["ttf","image","gfx","mixer", "unsafe_textures"]
